# nrfcxx

./: .gitignore  CHANGELOG.md  README.md  adc_8hpp.html  adc_8hpp_source.html  annotated.html  beacon_8hpp.html  beacon_8hpp_source.html  bme280_8hpp.html  bme280_8hpp_source.html  broadcaster_8hpp.html  broadcaster_8hpp_source.html  button_8hpp.html  button_8hpp_source.html  ccs811_8hpp.html  ccs811_8hpp_source.html  classes.html  classnrfcxx_1_1board_1_1iox__pin.html  classnrfcxx_1_1board_1_1power__monitor.html  classnrfcxx_1_1clock_1_1alarm.html  classnrfcxx_1_1clock_1_1clock__shift.html  classnrfcxx_1_1clock_1_1hfclk.html  classnrfcxx_1_1clock_1_1lfclk.html  classnrfcxx_1_1clock_1_1uptime.html  classnrfcxx_1_1clock_1_1uptime_1_1timestamp24.html  classnrfcxx_1_1event__set.html  classnrfcxx_1_1event__set__copy.html  classnrfcxx_1_1gpio_1_1active__signal.html  classnrfcxx_1_1gpio_1_1generic__pin.html  classnrfcxx_1_1gpio_1_1gpio__pin.html  classnrfcxx_1_1gpio_1_1instr__psel.html  classnrfcxx_1_1gpio_1_1instr__psel__scoped.html  classnrfcxx_1_1gpio_1_1pin__reference.html  classnrfcxx_1_1led_1_1Pattern.html  classnrfcxx_1_1led_1_1generic__led.html  classnrfcxx_1_1led_1_1led__type.html  classnrfcxx_1_1lpm_1_1lpsm__capable.html  classnrfcxx_1_1lpm_1_1state__machine.html  classnrfcxx_1_1misc_1_1lipo__monitor.html  classnrfcxx_1_1misc_1_1sx1509b.html  (+280 more)
LICENSES/: CCS811-FW-ams.txt
apps/: meson.build
board/ble400/: README.md  board.cc  meson.build
board/ble400/include/nrfcxx/: board.hpp
board/blend2/: README.md  board.cc  board.cnf  meson.build
board/blend2/include/nrfcxx/: board.hpp
board/faked/: README.md  board.cc  board.cnf
board/faked/include/nrfcxx/: board.hpp
board/papyr/: README.md  board.cc  meson.build
board/papyr/include/nrfcxx/: board.hpp
board/pca10028/: board.cc  meson.build
board/pca10028/include/nrfcxx/: board.hpp
board/pca10031/: board.cc  meson.build
board/pca10031/include/nrfcxx/: board.hpp
board/pca10040/: README.md  board.cc  meson.build
board/pca10040/include/nrfcxx/: board.hpp
board/pca10056/: README.md  board.cc  meson.build
board/pca10056/include/nrfcxx/: board.hpp
board/pca10059/: README.md  board.cc  board.cnf  meson.build
board/pca10059/include/nrfcxx/: board.hpp
board/pca20006/: board.cc  board.cnf  meson.build
board/pca20006/include/nrfcxx/: board.hpp
board/thingy52/: README.md  board.cc  meson.build
board/thingy52/include/nrfcxx/: board.hpp
board/xenon/: README.md  board.cc  board.cnf  meson.build
board/xenon/include/nrfcxx/: board.hpp
doc/: doxygen.cfg.in  mainpage.dox  meson.build
examples/: meson.build
examples/bootstrap/: alarm.cc  clock.cc  cstdio.cc  delay.cc  devinfo.cc  events.cc  extwdog.cc  gpiote.cc  instr_psel.cc  led.cc  led_pattern.cc  meson.build  nop.cc  off.cc  playground.cc  power.cc  rng.cc  sbrk.cc  systemstate.cc  thingy52.cc  uart.cc
examples/misc/: calsaadc.cc  lipomon.cc  meson.build  randio.cc  sx1509b.cc
examples/s130/: meson.build  nop.cc
examples/s132/: nop.cc
examples/s140/: meson.build  nop.cc
examples/sd/: beacon.cc  meson.build  stdbeacon.cc
examples/sensor/: adc.cc  bme280.cc  button.cc  caladc.cc  ccs811-fw.cc  ccs811.cc  contact.cc  hts221.cc  lps22hb.cc  meson.build  ntcThermistor.cc  saadc-burst.cc  sdp8xx.cc  sht21.cc  sht31.cc  vdd.cc  vdivider.cc
examples/utility/: display.cc  i2cdetect.cc  memory_pool.cc  meson.build  persist-NRF51_XXAC.mld  persist-NRF52832_XXAA.mld  persist-NRF52840_XXAA.mld  persist.cc  sfdp.cc
include/nrfcxx/: clock.hpp  core.hpp  crc.hpp  gpio.hpp  impl.hpp  led.hpp  lpm.hpp  meson.build  periph.hpp  utility.hpp  version.hpp.in
include/nrfcxx/console/: cstdio.hpp  null.hpp
include/nrfcxx/faked/: core.hpp
include/nrfcxx/internal/nrf51/: vector_table.inc
include/nrfcxx/internal/nrf52832/: vector_table.inc
include/nrfcxx/internal/nrf52840/: vector_table.inc
include/nrfcxx/misc/: lipomon.hpp  regulator.hpp  sx1509b.hpp
include/nrfcxx/newlib/: system.h
include/nrfcxx/nrf51/: core.hpp  impl.hpp
include/nrfcxx/nrf52/: core.hpp  core832.hpp  core840.hpp  impl.hpp
include/nrfcxx/sd/: beacon.hpp  broadcaster.hpp
include/nrfcxx/sensor/: adc.hpp  bme280.hpp  button.hpp  ccs811.hpp  contact.hpp  hts221.hpp  lps22hb.hpp  sdp8xx.hpp  sht21.hpp  sht31.hpp  utils.hpp
maintainer/: allboards  steinhart-hart.m
scripts/: appcrc32  erase  flash_softdevice  mkbuild  program  reset
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+101 more)
softdevices/: .gitignore  README.md  meson.build
softdevices/PATCHES/: 0001-s130-include-nrf_svc.h-work-around-GCC-bug-when-usin.patch  0002-s130-include-ble_gatts.h-make-structures-const-corre.patch  0003-s132-include-nrf_soc.h-use-native-NRF52-defines.patch  0004-s140-include-nrf_soc.h-use-native-NRF52-defines.patch
src/: clock.cc  core.cc  crc.cc  gpio.cc  gpiote.cc  led.cc  lpm.cc  meson.build  periph.cc  ppi.cc  qspi.cc  rng.cc  spi.cc  twi.cc  uart.cc  utility.cc
src/common/: README.md  clock.cc  meson.build
src/misc/: lipomon.cc  meson.build  sx1509b.cc
src/newlib/: cstdio.cc  meson.build  nosys.c  sbrk.c
src/nrf51/: core.cc  meson.build
src/nrf52/: core.cc  delay_cycles.S  meson.build
src/sd/: beacon.cc  broadcaster.cc  core.cc  meson.build
src/sensor/: adc.cc  bme280.cc  button.cc  ccs811.cc  contact.cc  hts221.cc  lps22hb.cc  meson.build  sdp8xx.cc  sht21.cc  sht31.cc  utils.cc
subprojects/: .gitignore  bme280.wrap  gtest.wrap  nrfx.wrap  pabigot-cxx.wrap
tests/: .gitignore  gt_clock.cc  gt_main.cc  gt_sensor_utils.cc  gt_stub.cc  meson.build
toolchain/GCC/: gcc_arm.ld  meson.build  startup_ARMCM0.S  startup_ARMCM4.S
(+12 files in other folders)
